# cockpit-oscap

./: .eslintrc.json  .gitignore  CLAUDE.md  README.md  org.cockpit_project.oscap.metainfo.xml  package.json  packit.yaml  pyproject.toml
packaging/: cockpit-oscap.spec.in
packaging/arch/: PKGBUILD.in
src/: api.ts  app.scss  app.tsx  global.d.ts  index.html  manifest.json  oscap-bridge.py  types.ts
src/components/: RiskBadge.tsx  RuleRow.tsx  ScoreCard.tsx
src/pages/: OverviewPage.tsx  ProfilesPage.tsx  ResultDetailPage.tsx  ResultsPage.tsx  ScanPage.tsx  SchedulePage.tsx  TailoringEditor.tsx
systemd/: cockpit-oscap-scan.service  cockpit-oscap-scan.timer
test/: check-oscap  run
test-bridge/: conftest.py  test_detect.py  test_profiles.py  test_remediate.py  test_risk.py  test_scan.py  test_tailoring.py  test_timer.py
test/browser/: main.fmf
