[project]
name = "cockpit-oscap-bridge"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
follow_imports = 'silent'  # https://github.com/python-lsp/pylsp-mypy/issues/81
scripts_are_modules = true  # allow checking all scripts in one invocation
explicit_package_bases = true
mypy_path = 'test/common:test:bots'
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
exclude = [
    "bots"
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    # run without bots checked out
    "machine.*",
    "testvm",

    # run without gobject-introspection
    "gi.*",
]

[tool.ruff]
target-version = "py311"
exclude = [
    ".git/",
    "modules/",
    "node_modules/",
]
line-length = 118
src = []

[tool.ruff.lint]
select = [
    "A",       # flake8-builtins
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "D300",    # pydocstyle: Forbid ''' in docstrings
    "E",       # pycodestyle
    "EXE",     # flake8-executable
    "F",       # pyflakes
    "FBT",     # flake8-boolean-trap
    "G",       # flake8-logging-format
    "I",       # isort
    "ICN",     # flake8-import-conventions
    "ISC",     # flake8-implicit-str-concat
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "ANN",     # flake8-annotations
    "ARG",     # flake8-unused-arguments
    "DTZ",     # flake8-datetimez
    "PIE",     # flake8-pie
    "PLE",     # pylint errors
    "PGH",     # pygrep-hooks
    "PT",      # flake8-pytest-style
    "PTH",     # flake8-use-pathlib
    "RET",     # flake8-return
    "RSE",     # flake8-raise
    "RUF",     # ruff rules
    "S",       # flake8-bandit
    "SIM",     # flake8-simplify
    "T10",     # flake8-debugger
    "TCH",     # flake8-type-checking
    "PL",      # pylint
    "ERA",     # eradicate
    "UP032",   # f-string
    "W",       # warnings (mostly whitespace)
    "YTT",     # flake8-2020
]
ignore = [
    "FBT002",  # Boolean default value in function definition
    "FBT003",  # Boolean positional value in function call
    "S603",    # subprocess call with shell=False (we need this)
    "S607",    # partial executable path in subprocess (we need this)
]

[tool.ruff.lint.per-file-ignores]
"test-bridge/**" = ["S101", "ANN"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["cockpit"]

[tool.pytest.ini_options]
testpaths = ["test-bridge"]

[tool.vulture]
ignore_names = [
   "test[A-Z0-9]*",
]
